--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,22 +1,21 @@
 {
     "home": "home",
     "menu": "menu",
-    "contact_us":"contact In",
-    "Sign-up":"Sign Up",
-   "title":"Dubai Restaurant - An exceptional dining experience",
-   "description":"Enjoy a fine dining experience at our restaurant that serves the finest cuisines from around the world. Visit us now for an unforgettable dining experience.",
-   "keywords":"Restaurant, Fine Dining, Meals, Drinks, Reservations",
-   "header_img":"Dubai restaurant",
-   "Order-your-favourite-food-here":"Order your favourite food here",
-   "Choose-from-a-diverse-menu":"Choose from a diverse menu featuring a delectable array of dishes crafted with the finest ingredients and culinary expertise. Our mission is to satisfy your cravings and elevate you dining experience, one delicious meal at a time.",
-   "View-Menu":"View Menu",
-   "Top-dishes-near-you":"Top dishes near you",
-   "COMPANY":"COMPANY",
-   "About-us":"About us",
-   "Delivery":"Delivery",
-   "Privacy-policy":"Privacy policy",
-   "GET-IN-TOUCH":"GET IN TOUCH",
-   "All-Right-Reserved":"All Right Reserved",
-   "The_bill":"The bill includes a service charge of 10%"
-  }
-  
+    "contact_us": "Contact Us",
+    "Sign-up": "Sign Up",
+    "title": "Dubai Restaurant - An exceptional dining experience",
+    "description": "Enjoy a fine dining experience at our restaurant that serves the finest cuisines from around the world. Visit us now for an unforgettable dining experience.",
+    "keywords": "Restaurant, Fine Dining, Meals, Drinks, Reservations",
+    "header_img": "Dubai restaurant",
+    "Order-your-favourite-food-here": "Order your favourite food here",
+    "Choose-from-a-diverse-menu": "Choose from a diverse menu featuring a delectable array of dishes crafted with the finest ingredients and culinary expertise. Our mission is to satisfy your cravings and elevate your dining experience, one delicious meal at a time.",
+    "View-Menu": "View Menu",
+    "Top-dishes-near-you": "Top dishes near you",
+    "COMPANY": "COMPANY",
+    "About-us": "About us",
+    "Delivery": "Delivery",
+    "Privacy-policy": "Privacy policy",
+    "GET-IN-TOUCH": "GET IN TOUCH",
+    "All-Right-Reserved": "All Rights Reserved",
+    "The_bill": "The bill includes a service charge of 10%"
+}
